compiler/example/error/github/raw.githubusercontent.com/wcpro/Scaffeine/89f58fd51097a098c1dacce13400df5091de006f/src/Scaffeine.Membership.Shell/content/Controllers/Home/HomeController.Start.cs.pp
namespace $rootnamespace$.Controllers.Home
{
    using System.Web.Mvc;

    public partial class HomeController
    {
        [HttpGet]
        public ActionResult Start()
        {
            return RedirectToAction("Index", "Dashboard");
        }
    }
}
